[gd_scene load_steps=13 format=2]

[ext_resource path="res://Enemies/Nyctha.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Utlilty Scenes/PlayerDetectionZone.tscn" type="PackedScene" id=3]
[ext_resource path="res://Utlilty Scenes/Hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Spells/HealSpell.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI/hpBar.tscn" type="PackedScene" id=6]
[ext_resource path="res://Utlilty Scenes/Stats.tscn" type="PackedScene" id=7]
[ext_resource path="res://UI/NycthaCooldown.tscn" type="PackedScene" id=8]
[ext_resource path="res://Enemies/Beam.tscn" type="PackedScene" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31, 30 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 30.5, 29 )

[sub_resource type="CircleShape2D" id=5]
radius = 318.002

[node name="Nyctha" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 0
script = ExtResource( 1 )
acceleration = 125

[node name="Stats" parent="." instance=ExtResource( 7 )]
position = Vector2( -68, -63 )
hp = 665
maxHp = 1000
armor = 8
max_armor = 100
shootcooldown = 2.0
summonCooldown = 30.0
beamBlinkTimer = 0.5
healSpellCooldown = 15.0

[node name="HealSpell" parent="." instance=ExtResource( 5 )]
visible = false
position = Vector2( -3, -31 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.972549, 0.12549, 0.12549, 1 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
scale = Vector2( 0.8, 0.8 )
shape = SubResource( 1 )

[node name="Beam" parent="." instance=ExtResource( 9 )]

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]
scale = Vector2( 0.8, 0.8 )
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( -0.5, 0 )
shape = SubResource( 3 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 3 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 5 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = -21.0
margin_top = -44.0
margin_right = 19.0
margin_bottom = -25.0

[node name="Node2D" type="Node2D" parent="."]

[node name="Position2D" type="Position2D" parent="Node2D"]

[node name="HpBar" parent="." instance=ExtResource( 6 )]
margin_left = -69.0
margin_top = -86.0
margin_right = -69.0
margin_bottom = -86.0

[node name="Healtimer" type="Timer" parent="."]

[node name="Cooldown" parent="." instance=ExtResource( 8 )]
margin_left = -46.0
margin_top = -61.0
margin_right = -46.0
margin_bottom = -61.0

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Healtimer" to="." method="_on_Healtimer_timeout"]

[editable path="Hurtbox"]
[editable path="PlayerDetectionZone"]
